--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -833,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
       "metadata": {
         "id": "68467ccc-d696-4ef1-84c4-164c9d87f755",
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
       "metadata": {
         "id": "5bebd1f3-2606-4102-aa55-01cb1650f632",
@@ -925,7 +925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
       "metadata": {
         "id": "0a3f894e-52ba-4c0b-9158-a70f31f4fd49",
@@ -963,7 +963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed",
       "metadata": {
         "id": "499b91d0-1f1b-494f-af2b-8cc3a06d90ed"
@@ -979,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
       "metadata": {
         "id": "f8ffed70-dfde-4262-a2fd-0d35d69b5fb1",
@@ -1011,7 +1011,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
       "metadata": {
         "id": "01f976ed-4dcd-4842-ae84-d3b5cc42d011",
@@ -1051,74 +1051,179 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
       "metadata": {
-        "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6"
+        "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
+        "outputId": "c42ee60f-c79c-4c26-b630-892f0cf23aff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The sum of the list is: 15\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a list of integers and print the sum of the elements."
+        "# Write a Python program to create a list of integers and print the sum of the elements\n",
+        "\n",
+        "def calculate_sum(numbers):\n",
+        "    return sum(numbers)\n",
+        "    numbers_list = [1, 2, 3, 4, 5]\n",
+        "result = calculate_sum(numbers_list)\n",
+        "print(f\"The sum of the list is: {result}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
-        "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443"
+        "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
+        "outputId": "6e677bf0-1b16-47fa-e47d-cc78fb319ba4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the largest element in a list."
+        "# Write a Python program to find the largest element in a list.\n",
+        "a=(5,10,15,20)\n",
+        "largest=max(a)\n",
+        "print(largest)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
-        "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37"
+        "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
+        "outputId": "b54182de-fe0a-4058-99c0-5f89529ebdad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6, 5, 4, 3, 2, 1]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to reverse a list."
+        "# Write a Python program to reverse a list.\n",
+        "a=[1,2,3,4,5,6]\n",
+        "a.reverse()\n",
+        "print(a)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
-        "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178"
+        "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
+        "outputId": "8f6739ac-558b-439a-c397-8a58e1dcc7a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original list:\n",
+            "[10, 20, 10, 30, 10, 40, 10, 50]\n",
+            "list after removing elements:\n",
+            "[20, 30, 40, 50]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "list = [10, 20, 10, 30, 10, 40, 10, 50]\n",
+        "n = 10\n",
+        "print (\"Original list:\")\n",
+        "print (list)\n",
+        "for x in list:\n",
+        "    if x == n:\n",
+        "        list.remove(x)\n",
+        "print (\"list after removing elements:\")\n",
+        "print (list)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
-        "id": "da9ba926-0ab5-46e9-b66d-128088c3225b"
+        "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
+        "outputId": "e8efbb0a-d9aa-4a8b-82dd-4ed31a2d1919",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The index of dog: 0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the index of an element in a list."
+        "# Write a Python program to find the index of an element in a list.\n",
+        "animals = ['dog', 'cat', 'lion']\n",
+        "index = animals.index('dog')\n",
+        "print('The index of dog:', index)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
       "metadata": {
-        "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d"
+        "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
+        "outputId": "8f6fe9b7-d4eb-4fe1-bc6e-8a6628f1fc91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Element exists in the list\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find if a specific element exists in a list."
+        "# Write a Python program to find if a specific element exists in a list\n",
+        "a = [10, 20, 30, 40, 50]\n",
+        "if 30 in a:\n",
+        "    print(\"Element exists in the list\")\n",
+        "else:\n",
+        "    print(\"Element does not exist\")\n"
       ]
     },
     {
@@ -1130,7 +1235,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program to remove duplicates from a list."
+        "# Write a Python program to remove duplicates from a list.\n"
       ]
     },
     {
