--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -1051,7 +1051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
       "metadata": {
         "id": "a0333c26-8e19-4c71-9722-d32cf8625ef6",
@@ -1081,7 +1081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
       "metadata": {
         "id": "5a23046d-80b0-4f8d-a02f-4e3d833c0443",
@@ -1108,7 +1108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
       "metadata": {
         "id": "9939c2d2-90fd-4e80-81bc-227c72e60e37",
@@ -1135,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
       "metadata": {
         "id": "aa287db8-057b-48d4-a6d8-18cc53eb7178",
@@ -1171,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
       "metadata": {
         "id": "da9ba926-0ab5-46e9-b66d-128088c3225b",
@@ -1199,7 +1199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
       "metadata": {
         "id": "9601b6e4-cb90-4e1f-87b4-38ed37076e0d",
@@ -1228,182 +1228,468 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
-        "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f"
+        "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
+        "outputId": "d04afddc-e813-4087-c770-6bc01e59bf38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 10, 20, 5]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove duplicates from a list.\n"
+        "# Write a Python program to remove duplicates from a list.\n",
+        "def Remove(duplicate):\n",
+        "    final_list = []\n",
+        "    for num in duplicate:\n",
+        "        if num not in final_list:\n",
+        "            final_list.append(num)\n",
+        "    return final_list\n",
+        "duplicate = [2, 4, 10, 20, 5, 2, 20, 4]\n",
+        "print(Remove(duplicate))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
-        "id": "09e5121b-97b3-42e4-8025-f28f3470681b"
+        "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
+        "outputId": "2dc6e7b5-5d84-4970-c86b-10404cfd7745",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count the occurrences of an element in a list."
+        "# Write a Python program to count the occurrences of an element in a list.\n",
+        "freq = ['a', 1, 'a', 4, 3, 2, 'a'].count('a')\n",
+        "print(freq)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
-        "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a"
+        "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
+        "outputId": "2d472d67-f1e1-479f-f81c-cf4aed309434",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 120, 124]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to get the number of even numbers in a list."
+        "# Write a Python program to get the number of even numbers in a list.\n",
+        "def list_even(x):\n",
+        "    even = []\n",
+        "    for n in x:\n",
+        "        if not n %2:\n",
+        "            even.append(n)\n",
+        "    return even\n",
+        "numbers = [2,3,4,6,8,101,103,111,120,124]\n",
+        "print(list_even(numbers))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
-        "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96"
+        "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
+        "outputId": "10fda6ac-1c07-472e-c460-e0391d0c8cb3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total Items: 4\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a tuple and print it."
+        "# Write a Python program to create a tuple and print it.\n",
+        "cars = ('BMW', 'Tesla', 'Ford', 'Toyota')\n",
+        "print('Total Items:', len(cars))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
-        "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1"
+        "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
+        "outputId": "2ee170a6-84aa-486c-a60e-98de05921e3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['a', 'mm', 'ppp', 'bb', 'cc']\n",
+            "<class 'list'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a tuple to a list and vice versa."
+        "# Write a Python program to convert a tuple to a list and vice versa.\n",
+        "my_tuple = (\"a\", \"mm\", \"ppp\", \"bb\", \"cc\")\n",
+        "\n",
+        "my_list = list(my_tuple)\n",
+        "\n",
+        "print(my_list)\n",
+        "print(type(my_list))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
-        "id": "d5192acc-27f3-456e-9c72-3b276a587bf5"
+        "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
+        "outputId": "658d7521-e3f8-4cca-9104-cb382443fdbe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Minimum value in the input: [1 1]\n",
+            "Maximum value in the input: [4 4]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the maximum and minimum values in a tuple."
+        "# Write a Python program to find the maximum and minimum values in a tuple.\n",
+        "import numpy as np\n",
+        "list1 = [(1,1), (3, 3), (2,2), (4,4)]\n",
+        "num = np.array(list1)\n",
+        "minimum_list = np.min(num, axis=0)\n",
+        "maximum_list = np.max(num, axis=0)\n",
+        "print(\"Minimum value in the input:\", minimum_list)\n",
+        "print(\"Maximum value in the input:\", maximum_list)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
-        "id": "43f0a340-9407-4302-af7e-4e63db578bbf"
+        "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
+        "outputId": "8c5b7bcb-551f-45a0-c08e-49385449cdfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 8, 3)\n",
+            "15\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "not enough values to unpack (expected 4, got 3)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-29b3b26e0214>\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mn1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mn2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mn3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mn1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn4\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 4, got 3)"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to unpack a tuple into variables."
+        "# Write a Python program to unpack a tuple into variables.\n",
+        "a = 4, 8, 3\n",
+        "print(a)\n",
+        "n1, n2, n3 = a\n",
+        "print(n1 + n2 + n3)\n",
+        "n1, n2, n3, n4= a\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
-        "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f"
+        "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
+        "outputId": "dc74c06c-643a-4782-eb36-4f1e7e92ff12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Letters are: {'s'}\n",
+            "Letters are: {'e', 's'}\n",
+            "Letters are: {'e', 's'}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to add an element to a set and check if an element exists in the set."
+        "# Write a Python program to add an element to a set and check if an element exists in the set.\n",
+        "GEEK = set()\n",
+        "GEEK.add('s')\n",
+        "print(\"Letters are:\", GEEK)\n",
+        "GEEK.add('e')\n",
+        "print(\"Letters are:\", GEEK)\n",
+        "GEEK.add('s')\n",
+        "print(\"Letters are:\", GEEK)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
-        "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86"
+        "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
+        "outputId": "eb7a8d35-c897-4bd9-fd21-ba0f1bcaf6d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Germany': 'Berlin', 'Canada': 'Ottawa', 'England': 'London'}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to create a dictionary with keys and values and print it."
+        "# Write a Python program to create a dictionary with keys and values and print it.\n",
+        "# creating a dictionary\n",
+        "country_capitals = {\n",
+        "  \"Germany\": \"Berlin\",\n",
+        "  \"Canada\": \"Ottawa\",\n",
+        "  \"England\": \"London\"\n",
+        "}\n",
+        "\n",
+        "# printing the dictionary\n",
+        "print(country_capitals)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
-        "id": "7432174b-fe75-4371-b23a-e2c5d62edb15"
+        "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
+        "outputId": "1b8998e3-ecb1-47a3-d313-20d2533bd637",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Asia\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to access a dictionary value using a key."
+        "# Write a Python program to access a dictionary value using a key.\n",
+        "dict = {\n",
+        "\"country\" : \"India\",\n",
+        "\"continent\" : \"Asia\",\n",
+        "\"Other_name\" : \"Bharat\"\n",
+        "}\n",
+        "x = dict[\"continent\"]\n",
+        "print(x)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
       "metadata": {
-        "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2"
+        "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
+        "outputId": "f54378de-aecc-49bb-aeb4-b3c93ab98dc8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a key exists in a dictionary."
+        "# Write a Python program to check if a key exists in a dictionary.\n",
+        "d = {'a': 1, 'b': 2, 'c': 3}\n",
+        "key = 'b'\n",
+        "print(key in d)\n",
+        "key = 'g'\n",
+        "print(key in d)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
-        "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d"
+        "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
+        "outputId": "aa559a6c-0d87-4722-cd5e-5fecb3f0a6d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'x': 10, 'y': 8, 'a': 6, 'b': 4}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to merge two dictionaries."
+        "# Write a Python program to merge two dictionaries.\n",
+        "d1 = {'x': 10, 'y': 8}\n",
+        "d2 = {'a': 6, 'b': 4}\n",
+        "d3 = d1 | d2\n",
+        "print(d3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
-        "id": "a78f1070-3ff3-436a-8391-153f019f53cd"
+        "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
+        "outputId": "108081c5-379d-4b2e-b85e-5a68af01542b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n",
+            "{'b': 2, 'c': 3, 'd': 4}\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove a key from a dictionary."
+        "# Write a Python program to remove a key from a dictionary.\n",
+        "myDict = {'a': 1, 'b': 2, 'c': 3, 'd': 4}\n",
+        "print(myDict)\n",
+        "if 'a' in myDict:\n",
+        "    del myDict['a']\n",
+        "print(myDict)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
-        "id": "fcba0267-8cc4-4e89-9e78-2d820916c177"
+        "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
+        "outputId": "7d06e1df-c6c7-4315-c2f0-d609ff564895",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Keys in Dictionary: [1, 2, 3, 4]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to get the number of keys in a dictionary."
+        "# Write a Python program to get the number of keys in a dictionary\n",
+        "\n",
+        "num = {1: 'One', 2: 'Two', 3: 'Three', 4: 'Four'}\n",
+        "keys = num.keys()\n",
+        "print('Keys in Dictionary:', [*keys])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
-        "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d"
+        "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
+        "outputId": "dea7a520-4ad2-47c3-947b-6db88cf8926f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Maximum : 89\n",
+            "Minimum : 35\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the largest and smallest values in a dictionary."
+        "# Write a Python program to find the largest and smallest values in a dictionary.\n",
+        "marks={\"m1\":78 , \"m2\":89 , \"m3\":64 , \"m4\":35 , \"m5\":71}\n",
+        "v = marks.values()\n",
+        "maxi = max(v)\n",
+        "mini = min(v)\n",
+        "print(\"Maximum :\",maxi)\n",
+        "print(\"Minimum :\",mini)"
       ]
     },
     {
