--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -1228,7 +1228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
       "metadata": {
         "id": "9d8e7311-81de-4da2-826c-c4dcad28ed9f",
@@ -1260,7 +1260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
       "metadata": {
         "id": "09e5121b-97b3-42e4-8025-f28f3470681b",
@@ -1286,7 +1286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
       "metadata": {
         "id": "b774b741-e9a6-45db-8f00-e6d9b734d03a",
@@ -1318,7 +1318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
       "metadata": {
         "id": "5ce4fd2b-ab16-4b40-9ac2-d19c244d8d96",
@@ -1344,7 +1344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
       "metadata": {
         "id": "5c04f880-6e96-4ef4-9f4b-df21aae76ff1",
@@ -1375,7 +1375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
       "metadata": {
         "id": "d5192acc-27f3-456e-9c72-3b276a587bf5",
@@ -1407,7 +1407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
       "metadata": {
         "id": "43f0a340-9407-4302-af7e-4e63db578bbf",
@@ -1450,7 +1450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
       "metadata": {
         "id": "46e96e29-2157-4b9f-bb24-0bd973eada9f",
@@ -1483,7 +1483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
       "metadata": {
         "id": "d81a803b-fd80-403e-9ae3-680ef44a3d86",
@@ -1516,7 +1516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
       "metadata": {
         "id": "7432174b-fe75-4371-b23a-e2c5d62edb15",
@@ -1547,7 +1547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
       "metadata": {
         "id": "000b3260-d91f-41f2-9729-4b0124f2c4d2",
@@ -1577,7 +1577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
       "metadata": {
         "id": "c4b1a942-818e-42c1-b742-1fabe80fca6d",
@@ -1605,7 +1605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
       "metadata": {
         "id": "a78f1070-3ff3-436a-8391-153f019f53cd",
@@ -1635,7 +1635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
       "metadata": {
         "id": "fcba0267-8cc4-4e89-9e78-2d820916c177",
@@ -1663,7 +1663,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
       "metadata": {
         "id": "d4c5fd77-9656-43e5-8fe2-be7dca23eb6d",
@@ -1704,86 +1704,222 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
       "metadata": {
-        "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627"
+        "id": "06a33fba-c6b1-4989-90f4-b647d1fe1627",
+        "outputId": "385393e6-e4e1-42cf-dd05-d994027bb09c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "36\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that returns the square of a number."
+        "# Write a Python function that returns the square of a number.\n",
+        "\n",
+        "number = 6\n",
+        "\n",
+        "squared = number * number\n",
+        "print(squared)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "91d90a4a-7329-45db-893b-caed8450ba96",
       "metadata": {
-        "id": "91d90a4a-7329-45db-893b-caed8450ba96"
+        "id": "91d90a4a-7329-45db-893b-caed8450ba96",
+        "outputId": "0ab41524-dc8f-4f76-9f8e-62f98c8f38ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sum of 15 and 12 is 27\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts two parameters and returns their sum."
+        "# Write a Python function that accepts two parameters and returns their sum.\n",
+        "num1 = 15\n",
+        "num2 = 12\n",
+        "sum = num1 + num2\n",
+        "print(\"Sum of\", num1, \"and\", num2 , \"is\", sum)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
       "metadata": {
-        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3"
+        "id": "dec2f9a5-90c5-478b-890b-0a506ecf45d3",
+        "outputId": "852253cb-d387-483d-a3a7-e0570e4d7cee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11 is a prime number\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to check if a given number is prime."
+        "# Write a Python function to check if a given number is prime.\n",
+        "num = 11\n",
+        "if num > 1:\n",
+        "    for i in range(2, (num//2)+1):\n",
+        "        if (num % i) == 0:\n",
+        "            print(num, \"is not a prime number\")\n",
+        "            break\n",
+        "    else:\n",
+        "        print(num, \"is a prime number\")\n",
+        "else:\n",
+        "    print(num, \"is not a prime number\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "56337441-68c3-45df-8733-a34cde0533a5",
       "metadata": {
-        "id": "56337441-68c3-45df-8733-a34cde0533a5"
+        "id": "56337441-68c3-45df-8733-a34cde0533a5",
+        "outputId": "15b5e6a7-fcc6-41d8-8f36-df6d6796664b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The factorial of 7 is 5040\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to calculate the factorial of a number using recursion."
+        "# Write a Python function to calculate the factorial of a number using recursion\n",
+        "def recur_factorial(n):\n",
+        "   if n == 1:\n",
+        "       return n\n",
+        "   else:\n",
+        "       return n*recur_factorial(n-1)\n",
+        "num = 7\n",
+        "if num < 0:\n",
+        "   print(\"Sorry, factorial does not exist for negative numbers\")\n",
+        "elif num == 0:\n",
+        "   print(\"The factorial of 0 is 1\")\n",
+        "else:\n",
+        "   print(\"The factorial of\", num, \"is\", recur_factorial(num))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
       "metadata": {
-        "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a"
+        "id": "84a2d010-e7b2-409b-b1f4-99bf806bb77a",
+        "outputId": "3783ffb7-d503-4510-858c-c5cea45fdfda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to calculate the power of a number using recursion."
+        "# Write a Python function to calculate the power of a number using recursion.\n",
+        "def power(N, P):\n",
+        "\tif P == 0:\n",
+        "\t\treturn 1\n",
+        "\treturn (N*power(N, P-1))\n",
+        "if __name__ == '__main__':\n",
+        "\tN = 5\n",
+        "\tP = 2\n",
+        "\tprint(power(N, P))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "ec44911e-7820-46cc-96a3-4ca443888837",
       "metadata": {
-        "id": "ec44911e-7820-46cc-96a3-4ca443888837"
+        "id": "ec44911e-7820-46cc-96a3-4ca443888837",
+        "outputId": "2eb68ccb-0fd4-42b9-a76d-adc4227d0127",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function to accept a list and return its length without using the built-in len() function."
+        "# Write a Python function to accept a list and return its length without using the built-in len() function.\n",
+        "string = 'Hello'\n",
+        "count = 0\n",
+        "for i in string:\n",
+        "    count+=1\n",
+        "print(count)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
       "metadata": {
-        "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836"
+        "id": "fb4c08e1-34f3-487a-a1c6-77cd60fb4836",
+        "outputId": "e0e7464a-d064-40ce-d3a3-220cbf6cf53e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi, I am Prince\n",
+            "My age is  20\n",
+            "Hi, I am Prince\n",
+            "My age is  20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python function that accepts both positional and keyword arguments and prints the sum of positional arguments."
+        "# Write a Python function that accepts both positional and keyword arguments and prints the sum of positional arguments.\n",
+        "def nameAge(name, age):\n",
+        "    print(\"Hi, I am\", name)\n",
+        "    print(\"My age is \", age)\n",
+        "nameAge(name=\"Prince\", age=20)\n",
+        "nameAge(age=20, name=\"Prince\")"
       ]
     },
     {
@@ -1956,26 +2092,70 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
       "metadata": {
-        "id": "0aac8430-5d77-439d-9a99-9598fadf989c"
+        "id": "0aac8430-5d77-439d-9a99-9598fadf989c",
+        "outputId": "9fcd2caa-53d5-406c-b7b3-af8df09017c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original list:  [2, 4, 6, 9, 11]\n",
+            "Given number:  2\n",
+            "Result:\n",
+            "4 8 12 18 22\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map()."
+        "# Write a Python program to multiply all numbers in a list by 2 using a lambda function inside map().\n",
+        "nums = [2, 4, 6, 9, 11]\n",
+        "n = 2\n",
+        "print(\"Original list: \", nums)\n",
+        "print(\"Given number: \", n)\n",
+        "filtered_numbers = list(map(lambda number: number * n, nums))\n",
+        "print(\"Result:\")\n",
+        "print(' '.join(map(str, filtered_numbers)))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
       "metadata": {
-        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22"
+        "id": "e4cd5ba8-c6ec-4f0d-8787-bf0a4b7a2e22",
+        "outputId": "5148c4bf-d630-4a1a-e04e-ed167a2e7677",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The original list is : [1, 3, 4, 6, 5, 1]\n",
+            "The list after performing the remove operation is : [3, 4, 6, 5]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to remove all occurrences of a specific element from a list."
+        "# Write a Python program to remove all occurrences of a specific element from a list.\n",
+        "def remove_items(test_list, item):\n",
+        "\tres = [i for i in test_list if i != item]\n",
+        "\treturn res\n",
+        "if __name__ == \"__main__\":\n",
+        "\ttest_list = [1, 3, 4, 6, 5, 1]\n",
+        "\titem = 1\n",
+        "\tprint(\"The original list is : \" + str(test_list))\n",
+        "\tres = remove_items(test_list, item)\n",
+        "\tprint(\"The list after performing the remove operation is : \" + str(res))\n"
       ]
     },
     {
